# fcitx5-sayura

./: CMakeLists.txt  Messages.sh  org.fcitx.Fcitx5.Addon.Sayura.metainfo.xml.in  org.fcitx.fcitx5-sayura.metainfo.xml.in
.github/workflows/: check.yml
data/: CMakeLists.txt
po/: CMakeLists.txt  ca.po  da.po  de.po  fcitx-sayura.pot  fcitx5-sayura.pot  fr.po  he.po  ja.po  ko.po  ru.po  tr.po  vi.po  zh_CN.po  zh_TW.po
src/: CMakeLists.txt  eim.c  sayura-addon.conf.in  sayura-addon.conf.in.in  sayura.conf.in  sayura.cpp  sayura.h
